--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,5 @@
 baseURL = 'https://s10490041.github.io/bbtw.github.io/'
 languageCode = 'en-us'
 title = 'roxo-hugo'
+[outputs]
+home = ["HTML", "RSS"]
